--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,138 +9,196 @@ title: Index Page Example
         <a href="https://www.gov.uk/service-toolkit#components" itemprop="item"><span itemprop="name">Components</span></a>
       </li>
       <li class="breadcrumbs__item breadcrumbs__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-        <a href="#main" itemprop="item"><span itemprop="name">Product Page</span></a>
+        <a href="#main" itemprop="item"><span itemprop="name">Verify</span></a>
       </li>
     </ol>
   </nav>
 
   <div class="hero hero--breaded">
-    <div class="hero__content">
-      <div class="hero__body">
-        <h1 class="hero__title">Duis aute irure dolor in reprehenderit</h1>
-        <div class="hero__inline-image">
-          <img src="//placehold.it/646x492/005ea5/ffffff?text=A+supporting+image" alt="" role="presentation">
+      <div class="hero__content">
+        <div class="hero__body">
+          <h1 class="hero__title">Be sure your users are who they say they are</h1>
+          <div class="hero__inline-image">
+            <img src="images/verify-product-image.png" alt="" role="presentation">
+          </div>
+          <p class="hero__description">
+            GOV.UK Verify is a trusted, secure way to prove identity online. Designed to prevent fraud and protect users’ privacy,
+            it’s a safe way to make sure you’re giving the right people access to your service.
+          </p>
+          <a href="/verify/get-started-check-verify-is-right" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
+            Find out how to get started
+          </a>
         </div>
-        <p class="hero__description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <div class="hero__aside-image">
+          <img src="images/verify-product-image.png" alt="" role="presentation">
+        </div>
+      </div>
+    </div>
+  </div>
+  <main id="content" role="main">
+
+
+    <div class="grid-row">
+      <div class="column-one-half">
+
+        <h2 class="heading-medium">How GOV.UK Verify can help services</h2>
+
+        <p>
+        Moving services online can save users time and money. It can also put them at risk of cyber crime. Using GOV.UK Verify to prove identity online can:
         </p>
-        <a href="#" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
-          Do this thing
-        </a>
-        <span class="hero-alternative-action">
-          or <a href="#" data-click-events data-click-category="Hero" data-click-action="Internal link clicked">do another thing</a> because reasons
-        </span>
-        <p>Pellentesque commodo arcu in sollicitudin lacinia. Vivamus lacus nibh, maximus nec laoreet eget, condimentum vel mi.</p>
-      </div>
-      <div class="hero__aside-image">
-        <img src="//placehold.it/646x492/005ea5/ffffff?text=A+supporting+image" alt="" role="presentation">
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <section class="content-section">
-        <h2 class="heading-large content-section__first-heading">A section</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
+  				<ul class="list list-bullet">
+          <li>help protect services and users from fraud</li>
+          <li>replace face-to-face identity checks</li>
+          <li>stop users waiting for documents to arrive in the post</li>
+          <li>replace physical signatures on legal documents</li>
+          </ul>
+          <p>
+          You may not need to verify your users’ identities. A simple authentication service may be enough.
+          </p>
+          <p><a href="/verify/get-started-check-verify-is-right">Find out if GOV.UK Verify is right for your service</a>.
+          </p>
 
-      <section class="content-section content-section--with-top-border">
-        <h2 class="heading-large content-section__first-heading">Another section</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
-
-      <section class="content-section content-section--with-top-border">
-        <h2 class="heading-large content-section__first-heading">A third section</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
-    </div>
-
-    <div class="column-one-third">
-      <aside class="related-items">
-        <h2 class="related-items__title">Related content</h2>
-        <ul class="related-items__list">
-          <li><a href="#">A link</a></li>
-          <li><a href="#">Another link</a></li>
-          <li><a href="#">A third link</a></li>
-        </ul>
-      </aside>
-    </div>
-  </div>
-
-  <section class="content-section content-section--with-top-border">
-    <div class="grid-row">
-      <div class="column-two-thirds">
-        <h2 class="heading-large content-section__first-heading">A full-width section</h2>
-        <p class="content-section__body">This section is full-width on tablet and above.</p>
-
-        <h3 class="heading-medium content-section__first-heading">A heading</h3>
-        <p class="content-section__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="content-section content-section--with-top-border">
-    <h2 class="heading-large content-section__first-heading">Lists in two columns</h2>
-    <div class="grid-row">
-      <div class="column-one-half">
-        <p>Here's a list of things:</p>
-        <ul class="list list-bullet">
-          <li>inceptos justo elit porta</li>
-          <li>elit porta mattis cras</li>
-          <li>malesuada ultricies amet</li>
-          <li>fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</li>
-          <li>lorem tellus mattis</li>
-          <li>maecenas faucibus mollis interdum</li>
-        </ul>
-
-        <p>This is a list of other things:</p>
-        <ul class="list list-bullet">
-          <li>ornare ultricies pellentesque</li>
-          <li>donec sed odio dui</li>
-          <li>cras justo odio, dapibus ac facilisis in, egestas eget quam</li>
-        </ul>
-      </div>
+      </div><br><br>
 
       <div class="column-one-half">
-        <p>Finally, another list on the other side:</p>
-
-        <ul class="list list-bullet">
-          <li>commodo sem vestibulum risus</li>
-          <li>fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</li>
-          <li>mollis parturient fermentum vestibulum condimentum</li>
-          <li>maecenas faucibus mollis interdum</li>
-        </ul>
-       </div>
-    </div>
-  </section>
-
-  <div class="grid-row">
-    <div class="column-half">
-      <section class="content-section content-section--with-top-border">
-        <h2 class="heading-large content-section__first-heading">A section with an image</h2>
-        <p>On tablet screen sizes and above, this is a left-aligned section with an image to the right.</p>
-      </section>
-    </div>
-    <div class="column-half">
-      <section class="content-section">
-        <img src="//placehold.it/1000x600" class="content-section__image">
-      </section>
-    </div>
-  </div>
-
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <section class="content-section content-section--with-top-border">
-        <h2 class="heading-large content-section__first-heading">A section with a video</h2>
         <div class="responsive-embed responsive-embed--16by9 responsive-embed--bordered">
           <div class="responsive-embed__wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Vtu7eKc6QpY" frameborder="0" allowfullscreen=""></iframe>
+            <iframe class="screenshot" width="500" height="290" src="https://www.youtube.com/embed/ABwvaT1uEfg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
+      </div>
+    </div>
+
+    <hr style="margin-bottom: 0;">
+
+     <div class="grid-row">
+      <div class="column-two-thirds">
+
+        <h2 class="heading-medium">What GOV.UK Verify does</h2>
+
+          <ul class="list list-bullet">
+
+          <li>Government-approved companies check the details users provide against records held by organisations like credit agencies.</li>
+          <li>Services can match users to records they already have or add new records if they need to.</li>
+          <li>Data isn’t stored in one place or shared unnecessarily.</li>
+          <li>There are different levels of identity assurance so services can choose the right one for them.</li>
+           <li>GOV.UK Verify is continually monitored for fraud.</li>
+          </ul>
+          <p>
+         Read about <a href="/verify/get-started-understand-how-verify-works">how GOV.UK Verify works</a>.
+          </p>
+
+      </div>
+
+    </div>
+
+     <hr style="margin-bottom: 0;">
+
+     <div class="grid-row">
+     <div class="column-one-half">
+
+       <h2 class="heading-medium">Secure by design</h2>
+
+       <p>
+         Working with the <a href="https://www.ncsc.gov.uk">National Cyber Security Centre</a> and the  <a href="https://www.gov.uk/government/groups/privacy-and-consumer-advisory-group">Privacy and Consumer Advisory Group</a>, the GOV.UK Verify team designed GOV.UK Verify to:
+       </p>
+       <ul class="list list-bullet">
+
+         <li>meet EU rules like the general data protection regulation (GDPR)</li>
+         <li>meet the highest anti-fraud standards</li>
+         <li>protect users’ privacy</li>
+
+       </ul>
+       <p>
+         Read about the <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/361496/PCAG_IDA_Principles_3.1__4_.pdf">identity assurance principles</a> that GOV.UK Verify follows.
+       </p>
+     </div>
+
+     <div class="column-half">
+      <section class="content-section">
+        <img src="images/ncsc-homepage.png" class="content-section__image">
       </section>
     </div>
-  </div>
-</div>
+
+   </div>
+
+  <hr style="margin-bottom: 0;">
+
+    <div class="grid-row">
+      <div class="column-one-half">
+        <h2 class="heading-medium">Supported by the people who built it</h2>
+        <p>
+          The GOV.UK Verify team at the Government Digital Service (GDS) gives services:
+        </p>
+        <ul class="list list-bullet">
+
+          <li>24/7 access to support</li>
+          <li><a href="http://alphagov.github.io/rp-onboarding-tech-docs/">step-by-step guidance</a> to help you connect</li>
+          <li>99.9 per cent service uptime</li>
+
+        </ul>
+        <p>
+          <a href="https://support-form.cloudapps.digital/support">Contact the support team</a>.
+        </p>
+      </div>
+
+      <div class="column-half">
+       <section class="content-section">
+         <img src="images/verify-team.png" class="content-section__image">
+       </section>
+     </div>
+
+    </div>
+
+    <hr style="margin-bottom: 0;">
+
+    <div class="grid-row">
+      <div class="column-full">
+        <h2 class="heading-medium">Tried and trusted</h2>
+              <p>You don’t need to build your own digital identity check from scratch or go through a long procurement process.</p>
+
+        <p>GOV.UK Verify has been designed and tested by GDS and it’s being used by over 2 million users and 8 organisations across government, including:</p>
+
+        <br>
+
+        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #00beb7;">
+          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
+          <span style="font-family: Arial; line-height: 1em;">Department<br>for Work &amp;<br>Pensions</span>
+        </div>
+
+        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #00a33b;">
+          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
+          <span style="font-family: Arial; line-height: 1em;">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
+        </div>
+
+        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #006c56;">
+          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
+          <span style="font-family: Arial; line-height: 1em;">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
+        </div>
+
+        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #003479;">
+          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
+          <span style="font-family: Arial; line-height: 1em;">Department for<br>Business, Energy<br>&amp; Industrial Strategy</span>
+        </div>
+
+
+  <p class="services-link">See the <a href="https://www.gov.uk/performance/govuk-verify/government-services">full list of services and organisations</a> already using GOV.UK Verify.</p>
+
+  <div class="panel panel-border-wide">
+                <p class="">“GOV.UK Verify is my favourite thing ever.”</p>
+                <p>– Vin Diesel, Chief Mechanic, DVLA</p>
+              </div>
+
+    <hr style="margin-bottom: 0;">
+
+    <div class="grid-row">
+      <div class="column-two-thirds">
+        <h2 class="heading-medium">How much GOV.UK Verify costs</h2>
+        <p>GOV.UK Verify costs each central government department £1.20 per verified user per year for all its services.</p>
+  <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify in local government or the private sector.</p>
+      </div>
+    </div>
+
+
+  </main>
