--- a/source/get-started-share-information.html.erb
+++ b/source/get-started-share-information.html.erb
@@ -20,16 +20,16 @@
       <nav class="sub-navigation">
         <ol itemscope itemtype="http://schema.org/ItemList">
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="get-started-check-verify-is-right.html" itemprop="item"><span itemprop="name">Check GOV.UK Verify is right for your service</span></a>
+            <a href="get-started-check-verify-is-right" itemprop="item"><span itemprop="name">Check GOV.UK Verify is right for your service</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="get-started-understand-how-verify-works.html" itemprop="item"><span itemprop="name">Understand how GOV.UK Verify works</span></a>
+            <a href="get-started-understand-how-verify-works" itemprop="item"><span itemprop="name">Understand how GOV.UK Verify works</span></a>
           </li>
           <li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="get-started-share-information.html" itemprop="item"><span itemprop="name">Share information with your team</span></a>
+            <a href="get-started-share-information" itemprop="item"><span itemprop="name">Share information with your team</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="get-started-connect-your-service.html" itemprop="item"><span itemprop="name">Connect your service to GOV.UK Verify</span></a>
+            <a href="get-started-connect-your-service" itemprop="item"><span itemprop="name">Connect your service to GOV.UK Verify</span></a>
           </li>
         </ol>
       </nav>
@@ -40,7 +40,7 @@
 
       <h2 class="heading-large">Share information with your team</h2>
       <p>Choosing to connect to Verify usually involves people with specialist knowledge, including technical, risk and privacy experts.</p>
-      <p>Share the <a href="http://alphagov.github.io/identity-assurance-documentation/">GOV.UK Verify documentation</a> with your team to help them understand what connecting to Verify involves.</p>
+      <p>Share the <a href="http://alphagov.github.io/identity-assurance-documentation/">GOV.rify documentation</a> with your team to help them understand what connecting to Verify involves.</p>
 
     </div>
   </div>
