--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Index Page Example
         <a href="https://www.gov.uk/service-toolkit#components" itemprop="item"><span itemprop="name">Components</span></a>
       </li>
       <li class="breadcrumbs__item breadcrumbs__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-        <a href="#main" itemprop="item"><span itemprop="name">Verify</span></a>
+        <a href="#main" itemprop="item"><span itemprop="name">GOV.UK Verify</span></a>
       </li>
     </ol>
   </nav>
@@ -21,11 +21,11 @@ title: Index Page Example
           <div class="hero__inline-image">
             <img src="images/verify-product-image.png" alt="" role="presentation">
           </div>
-          <p class="hero__description">
-            GOV.UK Verify is a trusted, secure way to prove identity online. Designed to prevent fraud and protect users’ privacy,
-            it’s a safe way to make sure you’re giving the right people access to your service.
-          </p>
-          <a href="/verify/get-started-check-verify-is-right" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
+            <p>
+              GOV.UK Verify is a trusted, secure way to prove identity online. Designed to prevent fraud and protect users’ privacy,
+              it’s a safe way to make sure you’re giving the right people access to your service.
+            </p>
+          <a href="/get-started-check-verify-is-right" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
             Find out how to get started
           </a>
         </div>
@@ -56,7 +56,7 @@ title: Index Page Example
           <p>
           You may not need to verify your users’ identities. A simple authentication service may be enough.
           </p>
-          <p><a href="/verify/get-started-check-verify-is-right">Find out if GOV.UK Verify is right for your service</a>.
+          <p><a href="/get-started-check-verify-is-right">Find out if GOV.UK Verify is right for your service</a>.
           </p>
 
       </div><br><br>
@@ -86,7 +86,7 @@ title: Index Page Example
            <li>GOV.UK Verify is continually monitored for fraud.</li>
           </ul>
           <p>
-         Read about <a href="/verify/get-started-understand-how-verify-works">how GOV.UK Verify works</a>.
+         Read about <a href="/get-started-understand-how-verify-works">how GOV.UK Verify works</a>.
           </p>
 
       </div>
@@ -196,9 +196,7 @@ title: Index Page Example
       <div class="column-two-thirds">
         <h2 class="heading-medium">How much GOV.UK Verify costs</h2>
         <p>GOV.UK Verify costs each central government department £1.20 per verified user per year for all its services.</p>
-  <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify in local government or the private sector.</p>
+        <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify in local government or the private sector.</p>
       </div>
     </div>
-
-
   </main>
