No longer need .html extension on on routes

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -87,7 +87,7 @@
                 <h2>About</h2>
                 <ul>
                   <li>
-                    <a href="/verify">
+                    <a href="/">
                       GOV.UK Verify overview
                     </a>
                   </li>
