--- a/source/get-started-understand-how-verify-works.html.erb
+++ b/source/get-started-understand-how-verify-works.html.erb
@@ -1,3 +1,7 @@
+---
+title: Get Started
+---
+
 <nav class="breadcrumbs" aria-label="Breadcrumbs">
   <ol itemscope itemtype="http://schema.org/BreadcrumbList">
     <li class="breadcrumbs__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
