--- a/source/support.html.erb
+++ b/source/support.html.erb
@@ -1,3 +1,7 @@
+---
+title: Support
+---
+
 <nav class="breadcrumbs" aria-label="Breadcrumbs">
   <ol itemscope itemtype="http://schema.org/BreadcrumbList">
     <li class="breadcrumbs__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
