Updated index page and styling

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -86,12 +86,12 @@
               <div class="column-one-third">
                 <h2>About</h2>
                 <ul>
-                  <li>
+                  <li class="footer-links">
                     <a href="/">
                       GOV.UK Verify overview
                     </a>
                   </li>
-                  <li>
+                  <li class="footer-links">
                     <a href="/get-started-check-verify-is-right">
                       Get started
                     </a>
@@ -101,16 +101,16 @@
               <div class="column-one-third">
                 <h2>Support</h2>
                 <ul>
-                  <li>
+                  <li class="footer-links">
                     <a href="/support">
                       Contact
                     </a>
                   </li>
 
-                  <li>
+                  <li class="footer-links">
                     <a href="http://alphagov.github.io/identity-assurance-documentation/">Documentation</a>
                   </li>
-                  <li>
+                  <li class="footer-links">
                     <a href="https://verifystatus.digital.cabinet-office.gov.uk">
                       System status
                     </a>
