--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,14 +37,14 @@ title: Verify
   </div>
   <main id="content" role="main">
 
-
+    <br>
     <div class="grid-row">
       <div class="column-one-half">
 
         <h2 class="heading-medium">How GOV.UK Verify can help services</h2>
 
         <p>
-        Moving services online can save users time and money. It can also put them at risk of cyber crime. Using GOV.UK Verify to prove identity online can:
+          As services move online to make things simpler and faster for users, they can face an increased risk of fraud. Using GOV.UK Verify to prove identity online can:
         </p>
 
   				<ul class="list list-bullet">
@@ -53,45 +53,35 @@ title: Verify
           <li>stop users waiting for documents to arrive in the post</li>
           <li>replace physical signatures on legal documents</li>
           </ul>
-          <p>
-          You may not need to verify your users’ identities. A simple authentication service may be enough.
-          </p>
           <p><a href="/get-started-check-verify-is-right">Find out if GOV.UK Verify is right for your service</a>.
           </p>
 
-      </div><br><br>
-
-      <div class="column-one-half">
-        <div class="responsive-embed responsive-embed--16by9 responsive-embed--bordered">
-          <div class="responsive-embed__wrapper">
-            <iframe class="screenshot" width="500" height="290" src="https://www.youtube.com/embed/ABwvaT1uEfg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
       </div>
     </div>
 
     <hr style="margin-bottom: 0;">
 
      <div class="grid-row">
-      <div class="column-two-thirds">
+      <div class="column-one-half">
 
-        <h2 class="heading-medium">What GOV.UK Verify does</h2>
+        <h2 class="heading-medium">How GOV.UK Verify works</h2>
 
           <ul class="list list-bullet">
-
-          <li>Government-approved companies check the details users provide against records held by organisations like credit agencies.</li>
-          <li>Services can match users to records they already have or add new records if they need to.</li>
+          <li>'<a href="/get-started-understand-how-verify-works">Certified companies</a>' check the details users provide against records held by organisations like credit agencies.</li>
           <li>Data isn’t stored in one place or shared unnecessarily.</li>
           <li>There are different levels of identity assurance so services can choose the right one for them.</li>
-           <li>GOV.UK Verify is continually monitored for fraud.</li>
+          <li>GOV.UK Verify continually monitors for fraud.</li>
           </ul>
           <p>
-         Read about <a href="/get-started-understand-how-verify-works">how GOV.UK Verify works</a>.
+         Read more about <a href="/get-started-understand-how-verify-works">how GOV.UK Verify works</a>.
           </p>
 
-      </div>
+      </div><br><br>
 
-    </div>
+      <div class="column-one-half">
+          <iframe class="screenshot" width="465" height="315" src="https://www.youtube.com/embed/ABwvaT1uEfg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+       </div>
+     </div>
 
      <hr style="margin-bottom: 0;">
 
@@ -105,7 +95,7 @@ title: Verify
        </p>
        <ul class="list list-bullet">
 
-         <li>meet EU rules like the general data protection regulation (GDPR)</li>
+         <li>meet EU rules like the General Data Protection Regulation (GDPR)</li>
          <li>meet the highest anti-fraud standards</li>
          <li>protect users’ privacy</li>
 
@@ -115,11 +105,11 @@ title: Verify
        </p>
      </div>
 
-     <div class="column-half">
+     <!--<div class="column-half">
       <section class="content-section">
         <img src="images/ncsc-homepage.png" class="content-section__image">
       </section>
-    </div>
+    </div>-->
 
    </div>
 
@@ -154,49 +144,40 @@ title: Verify
     <hr style="margin-bottom: 0;">
 
     <div class="grid-row">
-      <div class="column-full">
-        <h2 class="heading-medium">Tried and trusted</h2>
-              <p>You don’t need to build your own digital identity check from scratch or go through a long procurement process.</p>
-
-        <p>GOV.UK Verify has been designed and tested by GDS and it’s being used by over 2 million users and 8 organisations across government, including:</p>
-
-        <br>
-
-        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #00beb7;">
-          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
-          <span style="font-family: Arial; line-height: 1em;">Department<br>for Work &amp;<br>Pensions</span>
-        </div>
-
-        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #00a33b;">
-          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
-          <span style="font-family: Arial; line-height: 1em;">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
-        </div>
-
-        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #006c56;">
-          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
-          <span style="font-family: Arial; line-height: 1em;">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
-        </div>
-
-        <div class="logo column-one-quarter" style="padding-left: 10px; border-left: 3px solid #003479;">
-          <span style="display:block; height: 50px; background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/org_crest_27px-916806dcf065e7273830577de490d5c7c42f36ddec83e907efe62086785f24fb.png); background-size: auto 40px; background-repeat: no-repeat;"></span>
-          <span style="font-family: Arial; line-height: 1em;">Department for<br>Business, Energy<br>&amp; Industrial Strategy</span>
-        </div>
-
-
-  <p class="services-link">See the <a href="https://www.gov.uk/performance/govuk-verify/government-services">full list of services and organisations</a> already using GOV.UK Verify.</p>
-
-  <div class="panel panel-border-wide">
-                <p class="">“GOV.UK Verify is my favourite thing ever.”</p>
-                <p>– Vin Diesel, Chief Mechanic, DVLA</p>
-              </div>
-
-    <hr style="margin-bottom: 0;">
-
-    <div class="grid-row">
       <div class="column-two-thirds">
-        <h2 class="heading-medium">How much GOV.UK Verify costs</h2>
-        <p>GOV.UK Verify costs each central government department £1.20 per verified user per year for all its services.</p>
-        <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify in local government or the private sector.</p>
+        <h2 class="heading-medium">Tried and trusted</h2>
+          <p>You don’t need to build your own digital identity check from scratch or go through a long procurement process.</p>
+
+          <p>GOV.UK Verify has been designed and tested by GDS and it’s being used by over 2 million users and <a href="https://www.gov.uk/performance/govuk-verify/government-services">8 organisations</a>, including:
+          <br>
+
+          <div class="logo logo-defra column-one-quarter">
+          <span class="logo-logo"></span>
+          <span class="logo-text">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
+        </div>
+
+        <div class="logo logo-dvla column-one-quarter">
+          <span class="logo-logo"></span>
+          <span class="logo-text">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
+        </div>
+
+        <div class="logo logo-dwp column-one-quarter">
+          <span class="logo-logo"></span>
+          <span class="logo-text">Department<br>for Work &amp;<br>Pensions</span>
+        </div>
+
+        <div class="logo logo-hmrc column-one-quarter">
+          <span class="logo-logo"></span>
+          <span class="logo-text">HM Revenue<br>&amp; Customs</span>
+        </div>
+
+        <div class="panel panel-border-wide">
+          <p class="">“Being able to verify their identity online saves our users time and means we can start processing their application quicker.”</p>
+          <p>– Lisa Kernaghan, Digital Service Manager, Disclosure and Barring Service</p>
+        </div>
+
+        <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify.</p>
+        <div class="white-space"></div>
       </div>
     </div>
   </main>
