Updated view pages with up to date information and css

--- a/source/get-started-connect-your-service.html.erb
+++ b/source/get-started-connect-your-service.html.erb
@@ -55,4 +55,5 @@ title: Get Started
       <p>You can read about each step in the <a href="http://alphagov.github.io/identity-assurance-documentation/">GOV.UK Verify documentation</a>.</p>
     </div>
   </div>
+  <div class="white-space"></div>
 </main>
