--- a/source/get-started-share-information.html.erb
+++ b/source/get-started-share-information.html.erb
@@ -44,8 +44,9 @@ title: Get Started
 
       <h2 class="heading-large">Share information with your team</h2>
       <p>Choosing to connect to Verify usually involves people with specialist knowledge, including technical, risk and privacy experts.</p>
-      <p>Share the <a href="http://alphagov.github.io/identity-assurance-documentation/">GOV.rify documentation</a> with your team to help them understand what connecting to Verify involves.</p>
+      <p>Share the <a href="http://alphagov.github.io/identity-assurance-documentation/">GOV.UK Verify documentation</a> with your team to help them understand what connecting to Verify involves.</p>
 
     </div>
   </div>
+  <div class="white-space"></div>
 </main>
