--- a/source/stylesheets/_core.scss
+++ b/source/stylesheets/_core.scss
@@ -147,3 +147,7 @@ ul {
     background-image: url(https://assets.publishing.service.gov.uk/government/assets/crests/hmrc_crest_27px_x2-50c5ae1eac742b467695f5889f93024627e14f1c03a39db7a8e55edfe5d4417a.png);
   }
 }
+
+.lead-in { margin-bottom: 0; }
+
+.lead-in-bold { font-weight: bold; }
