--- a/source/get-started-check-verify-is-right.html.erb
+++ b/source/get-started-check-verify-is-right.html.erb
@@ -46,10 +46,11 @@ title: Get Started
       <h2 class="heading-medium">GOV.UK Verify could be right for your service if it needs to:</h2>
       <ul class="list list-bullet">
         <li>have legal confirmation that a user is who they say they are, for example if they’re signing a mortgage deed</li>
-        <li>show a user’s personal information back to them, like their driving licence or passport details</li>
+        <li>show a user’s personal information to them, like their driving licence or passport details</li>
          <li>pay money to a user</li>
+         <li>give the user something valuable, like a <a href="https://www.gov.uk/blue-badge-scheme-information-council">Blue Badge</a> or a council house</li>
       </ul>
-      <p>You don’t need GOV.UK Verify if you only need to recognise a returning user. You can use services like <a href="https://www.notifications.service.gov.uk">GOV.UK Notify</a> to help with authentication instead.</p>
+      <p>You might not need GOV.UK Verify if you only need to recognise a returning user. For example, if you’re making an appeal to the tax tribunal you can <a href="https://appeal-tax-tribunal.service.gov.uk/">save your appeal and return to it later</a>  by creating an account.</p>
       <h2 class="heading-medium">To help you decide if GOV.UK Verify is right for your service, you should think about:</h2>
       <ul class="list list-bullet">
         <li>what your service lets users do</li>
@@ -66,4 +67,5 @@ title: Get Started
       </ul>
     </div>
   </div>
+  <div class="white-space"></div>
 </main>
