--- a/source/get-started-understand-how-verify-works.html.erb
+++ b/source/get-started-understand-how-verify-works.html.erb
@@ -43,7 +43,7 @@ title: Get Started
       <h1 class="heading-xlarge">Get started</h1>
 
       <h2 class="heading-large" id="understand-how-gov.uk-verify-works">Understand how GOV.UK Verify works</h2>
-      <p>GOV.UK Verify provides a ‘hub’ between services and government-approved suppliers who can verify users' identities. These suppliers (or ‘certified companies’) are:</p>
+      <p>GOV.UK Verify provides a ‘hub’ between services and ‘certified companies’ who can verify users' identities. Certified companies are organisations that have met government and industry standards to provide identity assurance services as part of GOV.UK Verify. These certified companies are:</p>
       <ul class="list list-bullet">
         <li><a href="http://www.barclays.co.uk/identity">Barclays</a></li>
         <li><a href="https://www.citizensafe.co.uk/">CitizenSafe</a></li>
@@ -54,15 +54,21 @@ title: Get Started
         <li><a href="https://secureidentity.co.uk/">SecureIdentity</a></li>
       </ul>
 
-      <p>When a user tries to access your service</p>
-      <ol class="list list-bullet">
+      <p>When a user tries to access your service:</p>
+      <ol class="list list-number">
         <li>Your service sends them to the GOV.UK Verify hub.</li>
         <li>The hub sends them to a certified company.</li>
         <li>The certified company sends them back to the hub.</li>
         <li>The hub sends them back to your service.</li>
       </ol>
 
-      <p>This approach means users’ data isn’t stored in one place.</p>
+      <p>This approach means:</p>
+      <ul class="list list-bullet">
+        <li>users’ data isn’t stored in one place</li>
+        <li>services don’t know which certified company the user chooses</li>
+        <li>certified companies don’t know which service the user is trying to access</li>
+      </ul>
+
 
 
 
@@ -79,35 +85,44 @@ title: Get Started
       <h2 class="heading-medium">What your service receives</h2>
       <ol class="list list-number">
         <li>The certified company will send you the user’s name, address and date of birth.</li>
-        <li>You can match the user’s name, address and data of birth against records you already have, or create a new record to recognise your user in the future.</li>
+        <li>You can match the user’s name, address and date of birth against records you already have, or create a new record to recognise your user in the future.</li>
       </ol>
 
       <h2 class="heading-medium">Which ‘level of assurance’</h2>
-     <p>If you need to match a user to a real person, GOV.UK Verify provides different ‘levels of assurance’ (LOA) that describe how confident you need to be that your user is who they say they are. The most common ones are LOA 1 and LOA 2:</p>
+     <p>If you need to match a user to a real person, GOV.UK Verify provides different ‘levels of assurance’ (LOA) that describe how confident you need to be that your user is who they say they are. The most common ones are LOA 1 and LOA 2.</p>
 
-      <ul class="list list-bullet">
-        <li>LOA 1 means the user might be who they claim to be</li>
-        <li>LOA 2 means the user is probably who they claim to be</li>
-      </ul>
+      <p>The LOA 1 user journey is simpler and faster than the LOA 2 user journey but offers a lower level of certainty that a user is who they say they are. So when you decide which LOA to use, you should think about the potential risk to your service and the person the user’s claiming to be.</p>
 
-      <p>The LOA 1 user journey is simpler and faster than the LOA 2 user journey. So when you decide which LOA to use, you should think about the consequences to your service and the person the user’s claiming to be.</p>
-
-      <p>Different parts of your service may need a different LOA. You should always use the lowest necessary LOA for any particular action.</p>
+      <p>Different parts of your service may need a different LOA. </p>
 
       <p class="lead-in lead-in-bold">LOA 1</p>
 
       <p>Use LOA 1 when there wouldn’t be any serious consequences if a user impersonated someone else.</p>
 
-      <p>For example, if someone applies for a local resident discount for a toll crossing, the real resident can still apply for their own discount, and if they do they'll overwrite the previous application.</p>
+      <p>For example, if someone falsely applies for a local resident discount for a toll crossing, it wouldn’t seriously impact the real resident. The real resident can still apply for their own discount, which will overwrite the previous application.</p>
 
       <p class="lead-in lead-in-bold">LOA 2</p>
 
       <p>LOA 2 is usually appropriate if you’ll accept the user is who they say they are on the balance of probabilities.</p>
 
-      <p>LOA 2 is probably right for you if there would be a serious consequence to a user impersonating someone else on your service.</p>
+      <p>LOA 2 is probably right for you if:</p>
+      <ul class="list list-bullet">
+        <li>there would be a serious consequence to a user impersonating someone else on your service</li>
+        <li>you need to be able to take users to court if they’ve been fraudulent</li>
+      </ul>
 
-      <p>For example, if someone falsely submits a tax return in another person's name, that person could get a bill for money they don’t owe and need to spend time clearing up the error.</p>
+
+      <p>For example, if someone falsely submits a tax return in another person's name, that person could:
+        <ul class="list list-bullet">
+        <li>get a bill for money they don’t owe</li>
+        <li>have to pay a fine</li>
+        <li>spend time sorting out the mistake</li>
+      </ul>
+      </p>
+
+      <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you need help deciding which LOA is right for you.</p>
 
     </div>
   </div>
+  <div class="white-space"></div>
 </main>
