Rearanged the footer links, and removed about link from navigation

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,19 +15,19 @@ title: Verify
   </nav>
 
   <div class="hero hero--breaded">
-      <div class="hero__content">
-        <div class="hero__body">
-          <h1 class="hero__title">Be sure your users are who they say they are</h1>
-          <div class="hero__inline-image">
-            <img src="images/verify-product-image.png" alt="" role="presentation">
-          </div>
-            <p>
-              GOV.UK Verify is a trusted, secure way to prove identity online. Designed to prevent fraud and protect users’ privacy,
-              it’s a safe way to make sure you’re giving the right people access to your service.
-            </p>
-          <a href="/get-started-check-verify-is-right" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
-            Find out how to get started
-          </a>
+    <div class="hero__content">
+      <div class="hero__body">
+        <h1 class="hero__title">Be sure your users are who they say they are</h1>
+        <div class="hero__inline-image">
+          <img src="images/verify-product-image.png" alt="" role="presentation">
+        </div>
+        <p>
+          GOV.UK Verify is a trusted, secure way to prove identity online. Designed to prevent fraud and protect users’ privacy,
+          it’s a safe way to make sure you’re giving the right people access to your service.
+        </p>
+        <a href="/get-started-check-verify-is-right" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
+          Find out how to get started
+        </a>
         </div>
         <div class="hero__aside-image">
           <img src="images/verify-product-image.png" alt="" role="presentation">
@@ -104,13 +104,6 @@ title: Verify
          Read about the <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/361496/PCAG_IDA_Principles_3.1__4_.pdf">identity assurance principles</a> that GOV.UK Verify follows.
        </p>
      </div>
-
-     <!--<div class="column-half">
-      <section class="content-section">
-        <img src="images/ncsc-homepage.png" class="content-section__image">
-      </section>
-    </div>-->
-
    </div>
 
   <hr style="margin-bottom: 0;">
@@ -129,7 +122,7 @@ title: Verify
 
         </ul>
         <p>
-          <a href="https://support-form.cloudapps.digital/support">Contact the support team</a>.
+          <a href="/support">Contact the support team</a>. <!--https://support-form.cloudapps.digital/support-->
         </p>
       </div>
 
@@ -143,7 +136,7 @@ title: Verify
 
     <hr style="margin-bottom: 0;">
 
-    <div class="grid-row">
+    <div class="grid-row" >
       <div class="column-two-thirds">
         <h2 class="heading-medium">Tried and trusted</h2>
           <p>You don’t need to build your own digital identity check from scratch or go through a long procurement process.</p>
@@ -151,24 +144,24 @@ title: Verify
           <p>GOV.UK Verify has been designed and tested by GDS and it’s being used by over 2 million users and <a href="https://www.gov.uk/performance/govuk-verify/government-services">8 organisations</a>, including:
           <br>
 
-          <div class="logo logo-defra column-one-quarter">
-          <span class="logo-logo"></span>
-          <span class="logo-text">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
+          <div class="logos logos-defra column-one-quarter">
+          <span class="logos-logo"></span>
+          <span class="logos-text">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
         </div>
 
-        <div class="logo logo-dvla column-one-quarter">
-          <span class="logo-logo"></span>
-          <span class="logo-text">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
+        <div class="logos logo-dvla column-one-quarter">
+          <span class="logos-logo"></span>
+          <span class="logos-text">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
         </div>
 
-        <div class="logo logo-dwp column-one-quarter">
-          <span class="logo-logo"></span>
-          <span class="logo-text">Department<br>for Work &amp;<br>Pensions</span>
+        <div class="logos logos-dwp column-one-quarter">
+          <span class="logos-logo"></span>
+          <span class="logos-text">Department<br>for Work &amp;<br>Pensions</span>
         </div>
 
-        <div class="logo logo-hmrc column-one-quarter">
-          <span class="logo-logo"></span>
-          <span class="logo-text">HM Revenue<br>&amp; Customs</span>
+        <div class="logos logos-hmrc column-one-quarter">
+          <span class="logos-logo"></span>
+          <span class="logos-text">HM Revenue<br>&amp; Customs</span>
         </div>
 
         <div class="panel panel-border-wide">
@@ -177,7 +170,6 @@ title: Verify
         </div>
 
         <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify.</p>
-        <div class="white-space"></div>
       </div>
     </div>
   </main>
