--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -56,7 +56,7 @@
             <ul>
               <%
                 {
-                  'About' => '/',
+                  #'About' => '/',
                   'Get Started' => '/get-started-check-verify-is-right',
                   'Documentation' => 'http://alphagov.github.io/identity-assurance-documentation/',
                   'Support' => '/support'
@@ -84,23 +84,12 @@
           <div class="footer-categories-wrapper">
             <div class="grid-row">
               <div class="column-one-third">
-                <h2>About</h2>
                 <ul>
-                  <li class="footer-links">
-                    <a href="/">
-                      GOV.UK Verify overview
-                    </a>
-                  </li>
                   <li class="footer-links">
                     <a href="/get-started-check-verify-is-right">
                       Get started
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="column-one-third">
-                <h2>Support</h2>
-                <ul>
                   <li class="footer-links">
                     <a href="/support">
                       Contact
@@ -123,7 +112,6 @@
 
         <div class="footer-meta">
           <div class="footer-meta-inner">
-
             <div class="open-government-licence">
               <p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p>
                 <p>All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated</p>
