Changed footer heading for contact to support and made removed extra css for logo

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -92,7 +92,7 @@
                   </li>
                   <li class="footer-links">
                     <a href="/support">
-                      Contact
+                      Support
                     </a>
                   </li>
 
