--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -149,7 +149,7 @@ title: Verify
           <span class="logos-text">Department<br>for Environment<br>Food &amp; Rural Affairs</span>
         </div>
 
-        <div class="logos logo-dvla column-one-quarter">
+        <div class="logos logos-dvla column-one-quarter">
           <span class="logos-logo"></span>
           <span class="logos-text">Driver &amp; Vehicle<br>Licencing<br>Agency</span>
         </div>
@@ -166,7 +166,7 @@ title: Verify
 
         <div class="panel panel-border-wide">
           <p class="">“Being able to verify their identity online saves our users time and means we can start processing their application quicker.”</p>
-          <p>– Lisa Kernaghan, Digital Service Manager, Disclosure and Barring Service</p>
+          <p>– Lisa Keenaghan, Digital Service Manager, Disclosure and Barring Service</p>
         </div>
 
         <p><a href="mailto:idasupport+onboarding@digital.cabinet-office.gov.uk">Email us</a> if you’d like to know more about using GOV.UK Verify.</p>
